<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".GameSetup">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:text="@string/playersName"
        android:textColor="#4DB4D7"
        android:textSize="32sp"
        android:fontFamily="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear1Player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/cross"
            android:background="@null"/>
        <EditText
            android:id="@+id/player1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="5"
            android:hint="@string/player1Name"
            android:textColorHint="#4DB4D7"
            android:textColor="#4DB4D7"
            android:textSize="24sp"
            android:fontFamily="serif"
            android:inputType="textPersonName"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2Player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear1Player">
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/circle"
            android:scaleType="centerCrop"
            android:background="@null"/>
        <EditText
            android:id="@+id/player2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:fontFamily="serif"
            android:hint="@string/player2Name"
            android:textColorHint="#4DB4D7"
            android:textColor="#4DB4D7"
            android:textSize="24sp"
            android:inputType="textPersonName"/>
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/play_btn"
        android:fontFamily="serif"
        android:onClick="startGameClick"
        android:text="@string/startGame"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear2Player" />
</androidx.constraintlayout.widget.ConstraintLayout>